# magic-bytes

./: Cargo.toml  LICENSE  README.md
.github/: publish.yaml
.github/workflows/: publish.yaml
src/: lib.rs
